fix overflow issue

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ ul{
 }
 
 #hero-wrapper{
+    overflow-x: hidden;
     position: absolute;
     top: 0;
     left: 0;
@@ -90,7 +91,6 @@ ul{
     transform: translate(-50%, 0%);
     min-width: 100%;
     min-height: 100%;
-    overflow: hidden;
     z-index: -1;
 }
 
